--- a/src/App.css
+++ b/src/App.css
@@ -47,10 +47,12 @@
   align-items: center;
   border: 1px solid black;
   margin: 0 20px 20px;
+  cursor: pointer;
 }
 
 .adventure-list__item-container--disabled {
   opacity: 0.4;
+  cursor: not-allowed;
 }
 
 .adventure-list__image {
