--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@
 
 .adventure__container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -87,12 +87,20 @@
 }
 
 .adventure__image {
-  width: 250px;
-  height: 250px;
+  width: 350px;
+  height: 350px;
+}
+
+.adventure__options-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .adventure__option {
-  width: 100px;
+  margin: 25px;
+  width: 150px;
 }
 
 .adventure__sources {
