--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,18 @@
   width: 150px;
 }
 
+.adventure__result-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.adventure__result-image {
+  width: 50px;
+  height: 50px;
+}
+
 .adventure__sources {
   display: flex;
   flex-direction: column;
